[gd_scene load_steps=21 format=2]

[ext_resource path="res://MYGAMESPRITES/Bat/Spritesheet/FULL/BAT_FULL_SPREADSHEET.png" type="Texture" id=1]
[ext_resource path="res://BadGuys/Bat.gd" type="Script" id=2]
[ext_resource path="res://addons/btree/script/btree.gd" type="Script" id=3]
[ext_resource path="res://WonderTimer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/HurtBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://BadGuys/PlayerDetection.tscn" type="PackedScene" id=6]
[ext_resource path="res://BadGuys/EnemyDetection.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player/HitBox.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=8]
resource_name = "BatDamage"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25 ]
}

[sub_resource type="Animation" id=7]
resource_name = "BatDying"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=5]
resource_name = "BatGoingDown"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=1]
resource_name = "BatGoingLeft"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 8, 9, 10 ]
}

[sub_resource type="Animation" id=3]
resource_name = "BatGoingRight"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=4]
resource_name = "BatGoingUp"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
resource_name = "BatIdal"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 20, 21 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}

[sub_resource type="CapsuleShape2D" id=9]
radius = 9.0
height = 16.0

[sub_resource type="CircleShape2D" id=10]
radius = 82.662

[sub_resource type="CircleShape2D" id=12]
radius = 7.0

[sub_resource type="CircleShape2D" id=13]
radius = 82.201

[node name="Bat" type="KinematicBody2D"]
position = Vector2( 0, 1 )
collision_layer = 16
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 1 )
texture = ExtResource( 1 )
offset = Vector2( 0, -17 )
hframes = 26
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/BatDamage = SubResource( 8 )
anims/BatDying = SubResource( 7 )
anims/BatGoingDown = SubResource( 5 )
anims/BatGoingLeft = SubResource( 1 )
anims/BatGoingRight = SubResource( 3 )
anims/BatGoingUp = SubResource( 4 )
anims/BatIdal = SubResource( 6 )
anims/RESET = SubResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -5, -3, -6, -1, -7, 3, -4, 6, 0, 7, 4, 6, 8, 2, 7, -2, 2, -5, -3, -5 )

[node name="BTREE" type="Node" parent="."]
script = ExtResource( 3 )
tree = {
"connection": [ {
"from": "root",
"from_port": 0,
"to": "selector",
"to_port": 0
}, {
"from": "selector",
"from_port": 0,
"to": "task",
"to_port": 0
}, {
"from": "selector",
"from_port": 1,
"to": "selector2",
"to_port": 0
}, {
"from": "selector2",
"from_port": 0,
"to": "sequence",
"to_port": 0
}, {
"from": "sequence",
"from_port": 0,
"to": "task3",
"to_port": 0
}, {
"from": "sequence",
"from_port": 1,
"to": "task2",
"to_port": 0
}, {
"from": "selector2",
"from_port": 1,
"to": "sequence2",
"to_port": 0
}, {
"from": "sequence2",
"from_port": 0,
"to": "task5",
"to_port": 0
}, {
"from": "sequence2",
"from_port": 1,
"to": "task12",
"to_port": 0
}, {
"from": "sequence2",
"from_port": 2,
"to": "task4",
"to_port": 0
} ],
"nodes": [ {
"child": [ {
"child": [ {
"child": [  ],
"data": {
"count": 0,
"fn": "task_wander_around",
"offset": Vector2( 340, -140 ),
"params": [  ],
"size": Vector2( 349, 84.9999 ),
"title": "task",
"values": [  ]
},
"name": "task",
"type": 1
}, {
"child": [ {
"child": [ {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Check_Health",
"offset": Vector2( 720, -80 ),
"params": [  ],
"size": Vector2( 349, 85.0001 ),
"title": "task",
"values": [  ]
},
"name": "task3",
"type": 1
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Chase_Player",
"offset": Vector2( 720, 20 ),
"params": [  ],
"size": Vector2( 331, 83 ),
"title": "task",
"values": [  ]
},
"name": "task2",
"type": 1
} ],
"data": {
"count": 2,
"offset": Vector2( 500, 0 ),
"size": Vector2( 138, 109 ),
"title": "sequence"
},
"name": "sequence",
"type": 2
}, {
"child": [ {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Check_Health",
"offset": Vector2( 680, 120 ),
"params": [  ],
"size": Vector2( 420, 85.0001 ),
"title": "task",
"values": [  ]
},
"name": "task5",
"type": 1
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Check_For_Other_BadGuys",
"offset": Vector2( 680, 240 ),
"params": [  ],
"size": Vector2( 420, 85.0004 ),
"title": "task",
"values": [  ]
},
"name": "task12",
"type": 1
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Run_From_Player",
"offset": Vector2( 680, 340 ),
"params": [  ],
"size": Vector2( 357, 85.0002 ),
"title": "task",
"values": [  ]
},
"name": "task4",
"type": 1
} ],
"data": {
"count": 3,
"offset": Vector2( 460, 180 ),
"size": Vector2( 138, 136 ),
"title": "sequence"
},
"name": "sequence2",
"type": 2
} ],
"data": {
"count": 2,
"offset": Vector2( 320, 40 ),
"size": Vector2( 126, 109 ),
"title": "selector"
},
"name": "selector2",
"type": 3
} ],
"data": {
"count": 2,
"offset": Vector2( 160, -20 ),
"size": Vector2( 126, 109 ),
"title": "selector"
},
"name": "selector",
"type": 3
} ],
"data": {
"offset": Vector2( 0, 0 ),
"size": Vector2( 83.0002, 60.0022 )
},
"name": "root",
"type": 0
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_wander_around",
"offset": Vector2( 340, -140 ),
"params": [  ],
"size": Vector2( 349, 84.9999 ),
"title": "task",
"values": [  ]
},
"name": "task",
"type": 1
}, {
"child": [ {
"child": [  ],
"data": {
"count": 0,
"fn": "task_wander_around",
"offset": Vector2( 340, -140 ),
"params": [  ],
"size": Vector2( 349, 84.9999 ),
"title": "task",
"values": [  ]
},
"name": "task",
"type": 1
}, {
"child": [ {
"child": [ {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Check_Health",
"offset": Vector2( 720, -80 ),
"params": [  ],
"size": Vector2( 349, 85.0001 ),
"title": "task",
"values": [  ]
},
"name": "task3",
"type": 1
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Chase_Player",
"offset": Vector2( 720, 20 ),
"params": [  ],
"size": Vector2( 331, 83 ),
"title": "task",
"values": [  ]
},
"name": "task2",
"type": 1
} ],
"data": {
"count": 2,
"offset": Vector2( 500, 0 ),
"size": Vector2( 138, 109 ),
"title": "sequence"
},
"name": "sequence",
"type": 2
}, {
"child": [ {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Check_Health",
"offset": Vector2( 680, 120 ),
"params": [  ],
"size": Vector2( 420, 85.0001 ),
"title": "task",
"values": [  ]
},
"name": "task5",
"type": 1
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Check_For_Other_BadGuys",
"offset": Vector2( 680, 240 ),
"params": [  ],
"size": Vector2( 420, 85.0004 ),
"title": "task",
"values": [  ]
},
"name": "task12",
"type": 1
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Run_From_Player",
"offset": Vector2( 680, 340 ),
"params": [  ],
"size": Vector2( 357, 85.0002 ),
"title": "task",
"values": [  ]
},
"name": "task4",
"type": 1
} ],
"data": {
"count": 3,
"offset": Vector2( 460, 180 ),
"size": Vector2( 138, 136 ),
"title": "sequence"
},
"name": "sequence2",
"type": 2
} ],
"data": {
"count": 2,
"offset": Vector2( 320, 40 ),
"size": Vector2( 126, 109 ),
"title": "selector"
},
"name": "selector2",
"type": 3
} ],
"data": {
"count": 2,
"offset": Vector2( 160, -20 ),
"size": Vector2( 126, 109 ),
"title": "selector"
},
"name": "selector",
"type": 3
}, {
"child": [ {
"child": [ {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Check_Health",
"offset": Vector2( 720, -80 ),
"params": [  ],
"size": Vector2( 349, 85.0001 ),
"title": "task",
"values": [  ]
},
"name": "task3",
"type": 1
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Chase_Player",
"offset": Vector2( 720, 20 ),
"params": [  ],
"size": Vector2( 331, 83 ),
"title": "task",
"values": [  ]
},
"name": "task2",
"type": 1
} ],
"data": {
"count": 2,
"offset": Vector2( 500, 0 ),
"size": Vector2( 138, 109 ),
"title": "sequence"
},
"name": "sequence",
"type": 2
}, {
"child": [ {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Check_Health",
"offset": Vector2( 680, 120 ),
"params": [  ],
"size": Vector2( 420, 85.0001 ),
"title": "task",
"values": [  ]
},
"name": "task5",
"type": 1
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Check_For_Other_BadGuys",
"offset": Vector2( 680, 240 ),
"params": [  ],
"size": Vector2( 420, 85.0004 ),
"title": "task",
"values": [  ]
},
"name": "task12",
"type": 1
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Run_From_Player",
"offset": Vector2( 680, 340 ),
"params": [  ],
"size": Vector2( 357, 85.0002 ),
"title": "task",
"values": [  ]
},
"name": "task4",
"type": 1
} ],
"data": {
"count": 3,
"offset": Vector2( 460, 180 ),
"size": Vector2( 138, 136 ),
"title": "sequence"
},
"name": "sequence2",
"type": 2
} ],
"data": {
"count": 2,
"offset": Vector2( 320, 40 ),
"size": Vector2( 126, 109 ),
"title": "selector"
},
"name": "selector2",
"type": 3
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Check_Health",
"offset": Vector2( 720, -80 ),
"params": [  ],
"size": Vector2( 349, 85.0001 ),
"title": "task",
"values": [  ]
},
"name": "task3",
"type": 1
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Chase_Player",
"offset": Vector2( 720, 20 ),
"params": [  ],
"size": Vector2( 331, 83 ),
"title": "task",
"values": [  ]
},
"name": "task2",
"type": 1
}, {
"child": [ {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Check_Health",
"offset": Vector2( 720, -80 ),
"params": [  ],
"size": Vector2( 349, 85.0001 ),
"title": "task",
"values": [  ]
},
"name": "task3",
"type": 1
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Chase_Player",
"offset": Vector2( 720, 20 ),
"params": [  ],
"size": Vector2( 331, 83 ),
"title": "task",
"values": [  ]
},
"name": "task2",
"type": 1
} ],
"data": {
"count": 2,
"offset": Vector2( 500, 0 ),
"size": Vector2( 138, 109 ),
"title": "sequence"
},
"name": "sequence",
"type": 2
}, {
"child": [ {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Check_Health",
"offset": Vector2( 680, 120 ),
"params": [  ],
"size": Vector2( 420, 85.0001 ),
"title": "task",
"values": [  ]
},
"name": "task5",
"type": 1
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Check_For_Other_BadGuys",
"offset": Vector2( 680, 240 ),
"params": [  ],
"size": Vector2( 420, 85.0004 ),
"title": "task",
"values": [  ]
},
"name": "task12",
"type": 1
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Run_From_Player",
"offset": Vector2( 680, 340 ),
"params": [  ],
"size": Vector2( 357, 85.0002 ),
"title": "task",
"values": [  ]
},
"name": "task4",
"type": 1
} ],
"data": {
"count": 3,
"offset": Vector2( 460, 180 ),
"size": Vector2( 138, 136 ),
"title": "sequence"
},
"name": "sequence2",
"type": 2
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Run_From_Player",
"offset": Vector2( 680, 340 ),
"params": [  ],
"size": Vector2( 357, 85.0002 ),
"title": "task",
"values": [  ]
},
"name": "task4",
"type": 1
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Check_Health",
"offset": Vector2( 680, 120 ),
"params": [  ],
"size": Vector2( 420, 85.0001 ),
"title": "task",
"values": [  ]
},
"name": "task5",
"type": 1
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Check_For_Other_BadGuys",
"offset": Vector2( 680, 240 ),
"params": [  ],
"size": Vector2( 420, 85.0004 ),
"title": "task",
"values": [  ]
},
"name": "task12",
"type": 1
} ],
"root": {
"child": [ {
"child": [ {
"child": [  ],
"data": {
"count": 0,
"fn": "task_wander_around",
"offset": Vector2( 340, -140 ),
"params": [  ],
"size": Vector2( 349, 84.9999 ),
"title": "task",
"values": [  ]
},
"name": "task",
"type": 1
}, {
"child": [ {
"child": [ {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Check_Health",
"offset": Vector2( 720, -80 ),
"params": [  ],
"size": Vector2( 349, 85.0001 ),
"title": "task",
"values": [  ]
},
"name": "task3",
"type": 1
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Chase_Player",
"offset": Vector2( 720, 20 ),
"params": [  ],
"size": Vector2( 331, 83 ),
"title": "task",
"values": [  ]
},
"name": "task2",
"type": 1
} ],
"data": {
"count": 2,
"offset": Vector2( 500, 0 ),
"size": Vector2( 138, 109 ),
"title": "sequence"
},
"name": "sequence",
"type": 2
}, {
"child": [ {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Check_Health",
"offset": Vector2( 680, 120 ),
"params": [  ],
"size": Vector2( 420, 85.0001 ),
"title": "task",
"values": [  ]
},
"name": "task5",
"type": 1
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Check_For_Other_BadGuys",
"offset": Vector2( 680, 240 ),
"params": [  ],
"size": Vector2( 420, 85.0004 ),
"title": "task",
"values": [  ]
},
"name": "task12",
"type": 1
}, {
"child": [  ],
"data": {
"count": 0,
"fn": "task_Run_From_Player",
"offset": Vector2( 680, 340 ),
"params": [  ],
"size": Vector2( 357, 85.0002 ),
"title": "task",
"values": [  ]
},
"name": "task4",
"type": 1
} ],
"data": {
"count": 3,
"offset": Vector2( 460, 180 ),
"size": Vector2( 138, 136 ),
"title": "sequence"
},
"name": "sequence2",
"type": 2
} ],
"data": {
"count": 2,
"offset": Vector2( 320, 40 ),
"size": Vector2( 126, 109 ),
"title": "selector"
},
"name": "selector2",
"type": 3
} ],
"data": {
"count": 2,
"offset": Vector2( 160, -20 ),
"size": Vector2( 126, 109 ),
"title": "selector"
},
"name": "selector",
"type": 3
} ],
"data": {
"offset": Vector2( 0, 0 ),
"size": Vector2( 83.0002, 60.0022 )
},
"name": "root",
"type": 0
}
}
_tree_id = "3133920610215533367"

[node name="WonderTimer" parent="." instance=ExtResource( 4 )]

[node name="HurtBox" parent="." instance=ExtResource( 5 )]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -10 )
shape = SubResource( 9 )

[node name="PlayerDetection" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
shape = SubResource( 10 )

[node name="HitBox" parent="." instance=ExtResource( 8 )]
collision_mask = 256

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 1, -16 )
shape = SubResource( 12 )

[node name="EnemyDetection" parent="." instance=ExtResource( 7 )]
collision_mask = 12

[node name="CollisionShape2D" parent="EnemyDetection" index="0"]
shape = SubResource( 13 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="WonderTimer"]
[editable path="HurtBox"]
[editable path="PlayerDetection"]
[editable path="HitBox"]
[editable path="EnemyDetection"]
